src/sass/myservice-utilities.scss
.margin-below {
  margin-bottom: uikit-space(1);
}

.uikit-body {
  .margin-below--none {
    margin-bottom: 0;
  }

  .margin-below--small {
    margin-bottom: uikit-space(0.2);
  }

  .margin-below--mid {
    margin-bottom: uikit-space(0.5);
  }

  .margin-below--large {
    margin-bottom: uikit-space(1.4);
  }

  .margin-below--extra {
    margin-bottom: uikit-space(2);
  }

  .margin-above {
    margin-top: uikit-space(1);
  }

  .margin-above--none {
    margin-top: 0;
  }

  .margin-above--small {
    margin-top: uikit-space(0.2);
  }

  .margin-above--mid {
    margin-top: uikit-space(0.5);
  }

  .margin-above--large {
    margin-top: uikit-space(1.4);
  }

  .margin-above--extra {
    margin-top: uikit-space(2);
  }

  .padding-above {
    padding-top: uikit-space(0.3);
  }

  .padding-above--none {
    padding-top: 0;
  }

  .padding-above--mid {
    padding-top: uikit-space(0.3);
  }

  .padding-above--large {
    padding-top: uikit-space(0.5);
  }

  .padding-above--extra {
    padding-top: uikit-space(1.4);
  }

  .padding-below {
    padding-bottom: uikit-space(0.3);
  }

  .padding-below--none {
    padding-bottom: 0;
  }

  .padding-below--mid {
    padding-bottom: uikit-space(0.3);
  }

  .padding-below--large {
    padding-bottom: uikit-space(0.5);
  }

  .padding-below--extra {
    padding-bottom: uikit-space(1.4);
  }

  .ss-align {
    text-align: center;
  }

  .ss-align--center {
    text-align: center;
  }

  .ss-align--center {
    margin-left: auto;
    margin-right: auto;
  }
  .ss-align--right {
    text-align: right;
  }

  .ms-align--right {
    text-align: center;
  }

  .mys-centred-item {
    margin: 0 auto;
    text-align: center;
  }

  .border-all {
    border:1px solid $gray-mild;
  }
  .border-bottom {
    border-bottom: 1px solid $gray-light;
  }

  .border-top {
    border-top: 1px solid $gray-light;
  }

  .border-bottom--mild {
    border-bottom: 1px solid $gray-mild;
  }

  .border-top--mild {
    border-top: 1px solid $gray-mild;
  }

  .border-bottom--dark {
    border-bottom: 1px solid $gray;
  }

  .border-top--dark {
    border-top: 1px solid $gray;
  }
  .or-divider {
    background: url("../images/ico-or.svg") no-repeat;
    background-position: center top;
    background-size: 30px 30px;
    height: 100%;
    width: 100%;
  }

  .clear-gutter {
    padding-left: ceil( $uikit-grid-12-gutter-width );
    padding-right: floor( $uikit-grid-12-gutter-width );
  }
}

@include uikit-media(sm) {
  .flex-container {
    display: table; // for IE 9
    display: flex;
		justify-content: center;
    margin: 1.5em 0;
    overflow: hidden;
    padding: 0;
  }

  .flex-container--wrap {
		flex-wrap: wrap;
  }

  .flex-item {
    display: table-cell; // for IE 9
    flex-grow: 1;
    margin: .5em;
  }

  .flex-item--equal-heights {
    display: flex;
    flex: 1;
    flex-flow: column wrap;
    margin: 0;
    margin-right: 1em;

    p {
      flex: 1;
      padding: 1.5em 1.7em;
    }

    a {
      align-items: center;
      display: flex;
      flex: 1;
      flex-flow: column;
    }

    &:last-of-type {
      margin-right: 0;
    }
  }

  .grids {
    &.side-pannel {
      border-left: 1px solid $gray-light;

      // left: uikit-space(1.3);
      padding-left: uikit-space(1.5);
    }
  }

  .row-eq-height {
    display: flex;
  }

  // .equal-heights__cel {}
}


.screen-text-above-xs {
  display: none;
}

.screen-text-above-zero {
  display: block;
}

@include uikit-media(xs) {
  .screen-text-above-xs {
    display: block;
  }

  .screen-text-above-zero {
    display: none;
  }
}


@media screen and (min-width: $medium-handheld) {
  .uikit-body {
    .ss-align {
      text-align: left;
    }

    .ss-align--center {
      text-align: center;
    }

    .ms-align--right {
      text-align: right;
    }
  }
}

.hover-effect {
  > div {
    opacity: 1;
    transition: opacity $transition-time ease-in-out;
  }

  &:hover {
    > div {
      opacity: 0.5;
      transition: opacity $transition-time ease-in-out;

      &:hover {
        opacity: 1;
      }
    }
  }
}

.transition-content {
  transition: opacity $transition-time ease-in-out;
  height: 0;
  opacity: 0;
  overflow: hidden;
  visibility: hidden;
}

.transition-content--open {
  height: auto;
  opacity: 1;
  visibility: visible;
}

a > img {
	border: 0;
}

